src/test/compile-fail/readalias.pat
.*Error.*writing to read-alias